# audio-to-tasks

./: .env.example  .gitignore  README.md  pyproject.toml
src/audio_to_tasks/: __init__.py
src/audio_to_tasks/api/: __init__.py  app.py  dependencies.py  schemas.py
src/audio_to_tasks/api/routes/: __init__.py  health.py  tasks.py  transcribe.py
src/audio_to_tasks/cli/: __init__.py  app.py  utils.py
src/audio_to_tasks/cli/commands/: __init__.py  extract.py  process.py  transcribe.py
src/audio_to_tasks/core/: __init__.py  config.py  exceptions.py  models.py  task_extractor.py  transcriber.py
src/audio_to_tasks/mcp/: __init__.py  server.py
src/audio_to_tasks/web/: __init__.py  app.py
src/audio_to_tasks/web/static/css/: style.css
src/audio_to_tasks/web/static/js/: app.js
src/audio_to_tasks/web/templates/: base.html  index.html
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api.py  test_cli.py  test_mcp.py
tests/unit/: __init__.py  test_config.py  test_models.py  test_task_extractor.py  test_transcriber.py
