[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audio-to-tasks"
version = "0.1.0"
description = "Convert audio recordings to actionable task lists"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "jpedrocr" },
]
keywords = ["audio", "transcription", "tasks", "whisper", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Text Processing",
    "Typing :: Typed",
]

dependencies = [
    "faster-whisper>=1.0.0",
    "ollama>=0.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "fastmcp>=2.0.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
audio-to-tasks = "audio_to_tasks.cli.app:main"

[project.urls]
Homepage = "https://github.com/jpedrocr/audio-to-tasks"
Repository = "https://github.com/jpedrocr/audio-to-tasks"
Issues = "https://github.com/jpedrocr/audio-to-tasks/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/audio_to_tasks"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "ARG",
    "SIM",
]
ignore = [
    "E501",
    "B008",  # Function calls in default arguments (common in FastAPI)
    "ARG001",  # Unused function argument (common in lifecycle handlers)
    "ARG002",  # Unused method argument (common in test fixtures)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG"]  # Ignore unused arguments in tests

[tool.ruff.lint.isort]
known-first-party = ["audio_to_tasks"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "faster_whisper.*",
    "ollama.*",
    "fastmcp.*",
    "torch.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/audio_to_tasks"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
fail_under = 80
